<resources>
    <string name="app_name">Market Pulse</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="login_prompt">Already have an account? Sign in here</string>
    <string name="login_failed">Login failed</string>
    <string name="login_button">Login</string>
    <string name="register_prompt">Don\'t have an account? Register here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>